# babel-usb-screen

./: README.md  file-to-path.js  sdkconfig.esp32s3usbotg
include/: display.h  tasks.h  tusb_config.h
main/inc/tinyusb/: tusb_config.h
main/src/monolith/: usb_mtp_impl.c.h
src/: CMakeLists.txt  display.c  init.c  taskdata.c
src/monolith/: usb_descriptors.c.h  usb_mtp_impl.c.h
